--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@
 html,
 body {
     height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 body {
@@ -28,6 +30,8 @@ body {
     min-height: calc(100vh - 96px);
     padding-top: 96px;
     position: relative;
+    display: flex;
+    flex-direction: column;
 }
 
 :root {
@@ -43,11 +47,14 @@ nav {
 }
 
 /* Footer */
-.footer {
-    background-color: rgba(0, 0, 0, 0.8);
-    padding: 1.5rem 0;
+footer {
+    background-color: rgba(0, 0, 0, 0.9) !important;
+    padding: 2rem 0;
     margin-top: auto;
     border-top: 1px solid rgba(255, 255, 255, 0.1);
+    width: 100%;
+    position: relative;
+    z-index: 10;
     font-size: 0.9rem;
 }
 
